<resources>
    <string name="app_name">StoryApp</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="title_register_page">Create a new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">Welcome Back,</string>
    <string name="message_login_page">Log in now to continue</string>
    <string name="name">Name</string>
    <string name="greeting">Hello, %1$s,</string>
    <string name="logout">Log Out</string>
    <string name="photos">Photos</string>
    <string name="input_email">Input Your Email</string>
    <string name="invalid_email">Invailid Format</string>
    <string name="name_required">Name is Required</string>
    <string name="input_pass">Input Your Password</string>
    <string name="pass_length">Password must be at least 8 characters</string>
    <string name="check_input">Please Chech Your Input</string>
    <string name="setting">Setting</string>
    <string name="add_story">Add Story</string>
    <string name="description">Description</string>
    <string name="image_story">Image Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="add_description">Add Descriptions Here</string>
    <string name="detail_story">Detail Story</string>
    <string name="image_login">Image Login</string>
    <string name="massage_register">Don\'t have an account?</string>
    <string name="image_detail">Image Detail Story</string>
    <string name="didnt_get_permission">Didn\'t Get Permission</string>
    <string name="input_image_first">Input Image First</string>
    <string name="logo_description">Logo Story App</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Location</string>
    <string name="enable_location">Enable Location</string>
    <string name="maps_title">Maps</string>
    <string name="add_image">Add Image</string>
    <string name="required_description">Description Required</string>
    <string name="alert_title">LOGOUT</string>
    <string name="alert_message">Are you sure to Log Out?</string>
    <string name="alert_negativ">No</string>
    <string name="alert_positive">Yes</string>
    <string name="logout_succes">You are logged out</string>
    <string name="story_from">Story From \:</string>
    <string name="date">dd-mm-yyyy</string>
</resources>